# OpenPatents

./: .gitignore  README.md  openpatents.txt  start_mvp.py
api/: main.py  pyproject.toml
frontend/: index.html  main.js  package-lock.json  package.json  style.css
worker/: database.py  logger_base.py  main.py  models.py  processor.py  pyproject.toml  scraper.py
worker/scripts/: reset_failed.py  seed_test.py  test_groq.py  test_processor.py  view_db.py
